--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ img.appendTo('#form1');
     $("#imgInp").change(function(){
         readURL(this);
     });
-</script
+</script>
   </head>
   <body>
     <section class="page-header">
