--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ img.appendTo('#form1');
 </head>
 <body>
     <form id="form1" runat="server">
-        <input type='file' id="imgInp" multiple/>
+        <input type='file' id="imgInp" multiple accept="image/*"/>
     </form>
 </body>
 </html>
