--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
        <span class="btn btn-primary  btn-file">
           <i class="glyphicon glyphicon-plus"></i>
           <span>Add files...</span>
-          <input type='file' id="imgInp" multiple/>
+          <input type='file' id="imgInp" multiple accept="image/*"/>
        </span>
     </form>
     <div class="demo-droppable">
